# cft_test_zadanie

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  dependencies.py  init_db.py  main.py
app/models/: __init__.py  booking.py  room.py  user.py
app/routers/: auth.py  bookings.py  rooms.py
app/schemas/: auth.py  booking.py  room.py  user.py
app/services/: auth.py  bookings.py  rooms.py
tests/: conftest.py  test_auth.py  test_bookings.py  test_rooms.py
